[gd_scene load_steps=7 format=2]

[ext_resource path="res://Data/Nodisa.wav" type="AudioStream" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="BoxShape3D" id=1]

[sub_resource type="PrismMesh" id=2]

[sub_resource type="SphereShape3D" id=3]

[sub_resource type="SphereShape3D" id=4]

[node name="Nodisa" type="CharacterBody3D" groups=["Enemies"]]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.59977, 3.24447, -10.9864 )
script = ExtResource( 2 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource( 2 )
skeleton = NodePath("")
material/0 = null

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D( 100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0 )
shape = SubResource( 3 )

[node name="AreaDmg" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaDmg"]
transform = Transform3D( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 1 )
volume_db = 40.0
unit_size = 5.0

[connection signal="body_entered" from="Area3D" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="AreaDmg" to="." method="_on_AreaDmg_body_entered"]
